--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,11 @@ section code {
 
 
 }
+@media (max-width: 460px) {
+    body{
+        font-size:0.8rem;
+    }
+    #main-doc{
+        top:300px;
+    }
+}
