--- a/styles.css
+++ b/styles.css
@@ -121,7 +121,7 @@ section code {
     }
 
     #navbar ul {
-        height: 68%;
+        height: 320px;
         padding: 0;
         margin: 0;
         border-bottom: 3px solid;
@@ -130,7 +130,7 @@ section code {
 
     #main-doc {
         position: relative;
-        top: 330px;
+        top: 320px;
         left: 0;
         margin-top: 50px;
     }
@@ -157,15 +157,6 @@ section code {
 
     }
 }
-@media (max-height: 660px) {
-    body{
-        font-size:0.9rem;
-    }
-    #main-doc{
-        position: relative;
-        top:280px;
-       
-    }
-}
+
 
 
